fix(publicpage): hide overflow

--- a/frontend/src/components/publicpagewrapper/styles/publicpagewrapper.module.scss
+++ b/frontend/src/components/publicpagewrapper/styles/publicpagewrapper.module.scss
@@ -12,6 +12,7 @@
   align-items: center;
 
   background-color: var(--mantine-primary-color-6);
+  overflow: hidden;
 
   // White panel stylings
   & > .panel {
